--- a/index.html
+++ b/index.html
@@ -6,7 +6,14 @@
     <title>propflex-market-hub</title>
     <meta name="description" content="Lovable Generated Project" />
     <meta name="author" content="Lovable" />
-    <link rel="icon" type="image/svg+xml" href="/assets/LogoS.png" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/assets/logoS.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/assets/logoS.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/assets/logoS.png">
+    <link rel="manifest" href="/assets/logoS.png">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 
     <meta property="og:title" content="propflex-market-hub" />
     <meta property="og:description" content="Lovable Generated Project" />
